# mission-control-cli

./: .gitignore  README.md  prd-2.md  prd.md  pyproject.toml
.deps/httpx-0.28.1.dist-info/: RECORD
.deps/markdown_it_py-4.0.0.dist-info/: RECORD
.deps/pygments-2.19.2.dist-info/: RECORD
.deps/pytest-9.0.2.dist-info/: RECORD
.deps/typer-0.24.1.dist-info/: RECORD
.venv2/: pyvenv.cfg
src/missionctl/: cli.py  client.py  formatting.py  models.py
src/missionctl/commands/: __init__.py  agent.py  commentary.py  common.py  doctor.py  project.py  settings.py  task.py  task_run.py
tests/: conftest.py  test_agent.py  test_client.py  test_doctor.py  test_formatting.py  test_models.py  test_task_claim.py  test_task_expire.py  test_task_release.py  test_task_run.py  test_task_update.py  test_tier2_commands.py
