[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "missionctl"
version = "0.1.0"
description = "Mission Control CLI for OpenClaw agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6.0",
  "typer>=0.12.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "respx>=0.22.0",
]

[project.scripts]
missionctl = "missionctl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/missionctl"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
